Fix download tests in WK2

Modify ephy_download_dispose to disconnect WebKitDownload from all the handlers.

https://bugzilla.gnome.org/show_bug.cgi?id=694579